--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 server.port=8082
 spring.datasource.url=jdbc:h2:mem:inventory-db
 spring.cloud.discovery.enabled=true
-spring.application.name=inventory-service
+spring.application.name=product-service
