--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
 spring.datasource.url=jdbc:h2:mem:users-db
 spring.application.name=user-service
-#eureka.client.register-with-eureka=true
+eureka.client.register-with-eureka=false
+spring.h2.console.enabled=true
+jwt.secret=secret
